@@ -1,3 +1,6 @@
+10 Oct 2014: Wouter
+	- Fix #616: retry xfer for zones with no content after command.
+
 8 Oct 2014: Wouter
 	- Fix "xfrd_handle_ipc: bad mode" log errors when compiled 
 	  with --disable-bind8-stats.
